--- a/src/app/trip-entry/trip-entry.component.html
+++ b/src/app/trip-entry/trip-entry.component.html
@@ -20,5 +20,5 @@
   The time: {{theTime}}
 </p>
 <p>
-    <button mat-flat-button color="primary" (click)="onClick()">Primary</button>
+    <button mat-flat-button color="primary" (click)="onClick($event)">Submit</button>
 </p>
