working date and time form - finally

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,12 @@
           <mat-toolbar-row>
             <span>
               <a class="navbar-brand" routerLink="home">
-                Pickle Rick Dev
+                TripTok
                 <i class="fa fa-road"></i>
               </a>
-              <button mat-button [matMenuTriggerFor]="menu">Trips</button>
-              <mat-menu #menu="matMenu">
-                <a class="mat-menu-item nav-link" routerLink="home">home</a>
-              </mat-menu>
               <button mat-button routerLink="transitpoint">Transit Point</button>
             </span>
             <span class="fill-center"></span>
-      
             <span>
               <i class="fa fa-user"></i>
             </span>
