--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
                 <i class="fa fa-road"></i>
               </a>
               <button mat-button routerLink="transitpoint">Transit Point</button>
+              <button mat-button routerLink="createtrip">Create Trip</button>
             </span>
             <span class="fill-center"></span>
             <span>
