--- a/src/app/create-trip/create-trip.component.html
+++ b/src/app/create-trip/create-trip.component.html
@@ -8,7 +8,7 @@
       </mat-form-field>
     </p>
     <p>
-        <button type="submit" class="mdc_button mdc-button--raised">Submit</button>
+        <button type="submit" mat-flat-button color="primary">Submit</button>
     </p>
   </form>
   
