--- a/src/app/transit-point/transit-point.component.html
+++ b/src/app/transit-point/transit-point.component.html
@@ -18,6 +18,6 @@
     </mat-form-field>
   </p>
   <p>
-      <button type="submit" class="mdc_button mdc-button--raised">Submit</button>
+    <button type="submit" mat-flat-button color="primary">Submit</button>
   </p>
 </form>
