--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,24 +12,31 @@
         </span>
         <span class="fill-center"></span>
         <span>
-          <i class="fa fa-user"></i>
+          <button mat-flat-button color="primary" *ngIf="!isAuthenticated" (click)="login()"> Login </button>
+          <button mat-flat-button color="primary" *ngIf="isAuthenticated" (click)="logout()"> Logout </button>
         </span>
       </mat-toolbar-row>
     </mat-toolbar>
   </div>
 </div>
 <!-- views for active routed component render here -->
-<!-- <div class="row content">
-  <div class="col-sm">
-    <button *ngIf="!isAuthenticated" (click)="login()"> Login </button>
-    <button *ngIf="isAuthenticated" (click)="logout()"> Logout </button>
-    <p>
-      {{authToken | json}}
-    </p>
-  </div>
-</div> -->
 <div class="row content">
   <div class="col-sm">
     <router-outlet></router-outlet>
+  </div>
+</div>
+<div class="row content">
+  <div class="col-sm">
+    <mat-card class="example-card" *ngIf="isAuthenticated">
+      <mat-card-header>
+        <mat-card-title>User Claims</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>
+          {{authToken | json}}
+          <!-- {{(authToken | async) | json}} -->
+        </p>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
