--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
 <h2>About TripTok</h2>
 <p>
-    TripTok is the hyper-commuters time accounting system. Ever wonnder
-    how much time you spend in transit? Ever wonder when you're more likely
-    to be delayed? TripTok is here for you.
+    Blah blah blah
 </p>
