add environment vars

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,18 @@
-<h2>About TripTok</h2>
+<h2>What?</h2>
 <p>
-    Blah blah blah
+    This is a POC intended to kick the tires of a simple login system.
+</p>
+<p>I spent about 10 hrs on the app - it's angular w/OKTA hosted on 
+    <img src="https://api.netlify.com/api/v1/badges/5d31d19b-aadb-4fe2-b14e-63c3a0ac3eb9/deploy-status" alt="">
+</p>
+<p>I've customized the login flow text, SMS messages, and email flows. I've also 
+    set policy around 2nd Factor. You can create an account (requires email 
+    verification), set a password, and you must enroll a 2nd factor. I chose 
+    Google authenticator and SMS as options.
+</p>
+<p>
+    Try the onboarding and login flows. LMK what you think.
+</p>
+<p>
+    Get started by clicking the Login button.
 </p>
