--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
             TripTok
             <i class="fa fa-road"></i>
           </a>
-          <button mat-button routerLink="transitpoint">Transit Point</button>
-          <button mat-button routerLink="createtrip">Create Trip</button>
+          <button mat-button routerLink="createtrip">Take a Trip</button>
+          <button mat-button routerLink="transitpoint">Waypoints</button>
         </span>
         <span class="fill-center"></span>
         <span>
@@ -25,13 +25,16 @@
     <router-outlet></router-outlet>
   </div>
 </div>
-<div class="row content">
+<div class="row content" *ngIf="authToken != null">
   <div class="col-sm">
     <mat-card class="example-card" *ngIf="isAuthenticated">
       <mat-card-header>
-        <mat-card-title>User Claims</mat-card-title>
+        <mat-card-title>Congrats - you're logged in <i class="fa fa-user-secret"></i></mat-card-title>
       </mat-card-header>
       <mat-card-content>
+        <p>
+          Here's some stuff from Okta. We can include additional identifiers.
+        </p>
         <p>
           {{authToken | json}}
           <!-- {{(authToken | async) | json}} -->
