update text / readme

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,3 +16,6 @@
 <p>
     Get started by clicking the Login button.
 </p>
+<p>
+    The code is <a href="https://github.com/justinjosephsmith/picklericksite">here</a>
+</p>
